# omnom-ci-bot

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: build-docker.yml  make-release.yml
src/: main.py
