[project]
name = "omnom-ci-bot"
version = "0.1.0"
description = "A Telegram bot that manages and translates release notes for software projects. It integrates with DeepL for automatic translation and supports user input for final approval and modifications."
authors = [
    {name = "Dmitriy Baranov",email = "baranovda89@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi (>=0.115.8,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "aiogram (>=3.17.0,<4.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ruff = "^0.9.6"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.ruff]
line-length = 88
lint.select = ["E", "F", "W", "C", "I", "B"]
exclude = ["migrations", "tests"]
